testsuite/tests/th/T11941.stderr

T11941.hs:7:30: error:
    ‘getFrst’ is not a (visible) constructor field name